// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component snapshot testing renders with disabled 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#6DD9D2",
      "borderRadius": 5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "width": 200,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#6DD9D2",
          "borderRadius": 5,
          "height": 40,
          "justifyContent": "center",
          "width": 200,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#bdbdbd",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Component snapshot testing renders with type: flat 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "width": 200,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 5,
          "height": 40,
          "justifyContent": "center",
          "width": 200,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#bdbdbd",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Component snapshot testing renders with type: flat-ripple 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "width": 200,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 5,
          "height": 40,
          "justifyContent": "center",
          "width": 200,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#bdbdbd",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Component snapshot testing renders with type: raised 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#289F97",
      "borderRadius": 5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "width": 200,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#289F97",
          "borderRadius": 5,
          "height": 40,
          "justifyContent": "center",
          "width": 200,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#bdbdbd",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
